Various bug fixes and added scrollbar to output div

--- a/pppio_dev/css/editor.css
+++ b/pppio_dev/css/editor.css
@@ -132,11 +132,11 @@ overflow: auto;
 {
 	background-color: #fff;
 	border: 1px solid #000;
-	height: 75%;
+	/*height: 70%;*/
 }
 
 .textOutput
 {
   overflow:scroll;
-	height: 25%;
+	height: 100%;
 }
